[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superclone"
version = "0.1.0"
description = "Clone a Git repo and generate an AI-powered summary document"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["git", "ollama", "llm", "summary", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.3.0",
    "click>=8.1.0",
]

[project.scripts]
superclone = "superclone.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/superclone"
Repository = "https://github.com/yourusername/superclone"

[tool.hatch.build.targets.wheel]
packages = ["src/superclone"]
